# graboid

./: .gitignore  CLAUDE.md  dev.sh  flake.nix  pyproject.toml
graboid-rs/: Cargo.toml  README.md  build.rs
graboid-rs/docs/: API.md
graboid-rs/frontend/: Cargo.toml  Trunk.toml  index.html
graboid-rs/frontend/src/: main.rs
graboid-rs/src/: api.rs  archives.rs  claude.rs  config.rs  db.rs  events.rs  main.rs  mcp_tools.rs  models.rs  path_policy.rs  runner.rs  state.rs  torrent.rs  ui.rs
graboid-rs/src/ui_assets/: base.css  base.js  config.js  index.js  jobs.js  login.css
graboid-rs/templates/: base.html  browser.html  config.html  jobs.html  login.html  notes.html
src/: __init__.py  orchestrator.py
src/archives/: __init__.py  handler.py
src/browser/: __init__.py  agent.py  chrome_agent.py  chrome_manager.py  claude_code_llm.py  download_action.py  notes.py
src/credentials/: __init__.py  keyring_store.py
src/files/: __init__.py  operations.py
src/jobs/: __init__.py  database.py  models.py  queue.py  runner.py
src/llm/: __init__.py  base.py  claude.py  manager.py  ollama.py  openai.py
src/sources/: __init__.py  base.py  ftp.py  local.py  sftp.py  smb.py
src/torrent/: __init__.py  client.py  manager.py
src/web/: __init__.py  api.py  app.py
src/web/templates/: base.html  config.html  index.html  jobs.html  notes.html
