[project]
name = "graboid"
version = "0.1.0"
description = "LLM-driven browser automation agent with BitTorrent support and web UI"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Browser automation
    "browser-use>=0.1.0",
    "playwright>=1.40.0",

    # BitTorrent clients
    "libtc>=1.3.0",          # Unified: qBittorrent, Transmission, Deluge, rTorrent
    "aria2p>=0.11.0",        # aria2 (HTTP/FTP/BitTorrent/Metalink)
    "torrentp>=0.1.0",       # Embedded libtorrent fallback

    # LLM backends
    "anthropic>=0.40.0",
    "ollama>=0.4.0",
    "openai>=1.0.0",

    # Utilities
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Web UI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
graboid = "src.orchestrator:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
