[project]
name = "graboid"
version = "0.1.0"
description = "LLM-driven browser automation agent with BitTorrent support and web UI"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Browser automation
    "browser-use>=0.1.0",
    "playwright>=1.40.0",

    # BitTorrent clients
    "libtc>=1.3.0",          # Unified: qBittorrent, Transmission, Deluge, rTorrent
    "aria2p>=0.11.0",        # aria2 (HTTP/FTP/BitTorrent/Metalink)
    "torrentp>=0.1.0",       # Embedded libtorrent fallback

    # LLM backends
    "anthropic>=0.40.0",
    "ollama>=0.4.0",
    "openai>=1.0.0",

    # Utilities
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "platformdirs>=4.0.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",

    # Web UI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=1.0.0",

    # Credential storage (keyring disabled - causes GUI prompts)
    # "keyring>=24.0.0",
    "cryptography>=42.0.0",

    # Source protocols
    "paramiko>=3.0.0",
    "smbprotocol>=1.10.0",

    # Archive handling
    "py7zr>=0.20.0",
    "rarfile>=4.0",

    # File operations
    "reflink>=0.2.0",

    # Database
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
graboid = "src.orchestrator:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
