[package]
name = "graboid-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
librqbit-embedded = ["dep:librqbit"]
browser-use-sdk = ["dep:browser_use"]

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.8", features = ["json", "macros", "ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
browser_use = { package = "browser-use", version = "0.2.3", optional = true }
bzip2 = "0.6"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cookie = "0.18"
flate2 = "1.1"
futures = "0.3"
globset = "0.4"
hmac = "0.12"
iana-time-zone = "0.1"
leptos = { version = "0.6", features = ["ssr"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls", "stream"] }
librqbit = { version = "8.1.0", optional = true, default-features = false, features = ["rust-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shlex = "1.3"
tar = "0.4"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = "0.24"
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
walkdir = "2.5"
which = "8.0"
xz2 = "0.1"
zip = { version = "2.4", default-features = false, features = ["deflate", "bzip2", "lzma", "zstd"] }
