[package]
name = "graboid_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1"
gloo-net = "0.6"
gloo-timers = "0.3"
js-sys = "0.3"
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["CssStyleDeclaration", "Document", "DomTokenList", "Element", "Event", "HtmlButtonElement", "HtmlElement", "HtmlImageElement", "Window"] }
